Javac2007/src/test/attr/error/generic_throwable.java
package test.attr.error;
public class generic_throwable<T> extends Exception {}
